// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PublisherBlock /> when there is no matching data should match the snapshot 1`] = `
<DocumentFragment>
  <dl
    class="data-list"
  >
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Name
      </dt>
      <dd
        class="data-list-value"
      >
         
      </dd>
    </div>
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Slug
      </dt>
      <dd
        class="data-list-value"
      >
         
      </dd>
    </div>
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Website
      </dt>
      <dd
        class="data-list-value"
      >
         
      </dd>
    </div>
  </dl>
  <a
    href="/publishers"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-left-long mr-1"
      data-icon="left-long"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M177.5 414c-8.8 3.8-19 2-26-4.6l-144-136C2.7 268.9 0 262.6 0 256s2.7-12.9 7.5-17.4l144-136c7-6.6 17.2-8.4 26-4.6s14.5 12.5 14.5 22l0 72 288 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32l-288 0 0 72c0 9.6-5.7 18.2-14.5 22z"
        fill="currentColor"
      />
    </svg>
    Back to Publishers
  </a>
</DocumentFragment>
`;

exports[`<PublisherBlock /> when there is publisher data should match the snapshot 1`] = `
<DocumentFragment>
  <dl
    class="data-list"
  >
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Name
      </dt>
      <dd
        class="data-list-value"
      >
        Crystal Sphere Publications
      </dd>
    </div>
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Slug
      </dt>
      <dd
        class="data-list-value"
      >
        crystal-sphere-publications
      </dd>
    </div>
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Website
      </dt>
      <dd
        class="data-list-value"
      >
        <a
          href="https://www.example.com/crystal-sphere-publications"
        >
          <span>
            www.example.com/crystal-sphere-publications
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <a
    href="/publishers"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-left-long mr-1"
      data-icon="left-long"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M177.5 414c-8.8 3.8-19 2-26-4.6l-144-136C2.7 268.9 0 262.6 0 256s2.7-12.9 7.5-17.4l144-136c7-6.6 17.2-8.4 26-4.6s14.5 12.5 14.5 22l0 72 288 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32l-288 0 0 72c0 9.6-5.7 18.2-14.5 22z"
        fill="currentColor"
      />
    </svg>
    Back to Publishers
  </a>
</DocumentFragment>
`;
